--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: Node.js CI
 
@@ -7,42 +9,29 @@ on:
   push:
     branches: [ "master" ]
 
+
 jobs:
   build:
+
     runs-on: self-hosted
+
     strategy:
       matrix:
         node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Create .env file
-        run: |
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: |
           touch .env
-          echo "${{ secrets.PROD }}" > .env
-
-      # Scale PM2 process to 3 instances
-      - name: Scale PM2 process to 3 instances
-        run: pm2 scale Backend 3
-
-      # Check if PM2 process is active
-      - name: Check if PM2 process is active
-        run: |
-          if pm2 list | grep -q 'Backend'; then
-            echo "Backend is active"
-          else
-            echo "Backend is not active"
-            exit 1
-          fi
-
+          echo "${{ secrets.PROD }}" > .env    
+    - run: pm2 restart Backend    
+     # Adicionando logs
+    - name: Print status
+      run: echo "PM2 restarted successfully"
